# TelemetrySystem

./: .clang-format  .gitignore  CMakeLists.txt  STM32H743xx_FLASH.ld  STM32H750XX_FLASH.ld  Telemetry.ioc  ov2640_sd.ioc
Core/Inc/: .gitignore  ESP8266.h  driver_ov2640.h  driver_ov2640_basic.h  driver_ov2640_interface.h  main.h  ov2640.h  ov2640_basic.h  ov2640_interface.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: ESP8266.c  driver_ov2640.c  driver_ov2640_interface_template.c  main.c  main.cxx  ov2640.c  ov2640_basic.c  ov2640_interface.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  syscalls.c  sysmem.c  system_stm32h7xx.c
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_uart.c
FATFS/App/: fatfs.c  fatfs.h
MBEDTLS/App/: mbedtls.c  mbedtls_config.h
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
interface/: CMakeLists.txt  DataTypes.h  constants.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
interface/debugger/: register.py
interface/debugger/qt6renderer/: qshareddatapointer.py
